[package]
name = "nimbus-consensus"
description = "Client-side worker for the Nimbus family of consensus algorithms"
edition = "2021"
version = "0.9.0"
[dependencies]
# Axlib deps
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sc-consensus-manual-seal = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-application-crypto = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }
axlib-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "c92f69d" }

# Axia dependencies
axia-client = { git = "https://github.com/axtend/axia", branch = "66cb46b", default-features = false }

# Cumulus dependencies
cumulus-client-consensus-common = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }
cumulus-relay-chain-interface = { git = "https://github.com/axtend/cumulus", branch = "b43fcff" }

# Nimbus Dependencies
nimbus-primitives = { path = "../nimbus-primitives" }

# Other deps
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
futures = { version = "0.3.8", features = [ "compat" ] }
log = "0.4"
parking_lot = "0.9"
tracing = "0.1.22"
