[package]
name = "nimbus-consensus"
description = "Client-side worker for the Nimbus family of consensus algorithms"
edition = "2021"
version = "0.9.0"
[dependencies]
# Substrate deps
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus-manual-seal = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-application-crypto = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
substrate-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Axia dependencies
axia-client = { git = "https://github.com/axtend/axia", branch = "axia", default-features = false }

# Cumulus dependencies
cumulus-client-consensus-common = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-relay-chain-interface = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }

# Nimbus Dependencies
nimbus-primitives = { path = "../nimbus-primitives" }

# Other deps
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
futures = { version = "0.3.8", features = [ "compat" ] }
log = "0.4"
parking_lot = "0.9"
tracing = "0.1.22"
