[package]
name = "allychain-template-node"
authors = [ "Anonymous" ]
build = "build.rs"
description = "A Substrate node that demonstrates using the Nimbus consensus framework with instant seal and as a allychain."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
repository = "https://github.com/paritytech/cumulus/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "allychain-collator"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99.2"
hex-literal = "0.3.1"
log = "0.4.14"
serde = { version = "1.0.119", features = [ "derive" ] }
flume = "0.10.9"
clap = { version = "3.1", features = ["derive"] }

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
nimbus-consensus = { path = "../../nimbus-consensus" }
nimbus-primitives = { path = "../../nimbus-primitives" }
allychain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
frame-benchmarking-cli = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

pallet-transaction-payment-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

substrate-frame-rpc-system = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
substrate-prometheus-endpoint = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-chain-spec = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-cli = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-client-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-consensus-manual-seal = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-executor = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-keystore = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-network = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-rpc = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-rpc-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-service = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17", features = [ "wasmtime" ] }
sc-telemetry = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-tracing = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sc-transaction-pool-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-block-builder = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-blockchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
#sp-consensus = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-core = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-inherents = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-keystore = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-offchain = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-runtime = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-session = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-timestamp = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }
sp-transaction-pool = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-client-collator = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-client-consensus-common = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-client-network = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-client-service = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-primitives-core = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-relay-chain-interface = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
cumulus-relay-chain-local = { git = "https://github.com/purestake/cumulus", branch = "moonbeam-axia-v0.9.17" }
# Axia dependencies
axia-cli = { git = "https://github.com/purestake/axia", branch = "moonbeam-axia-v0.9.17" }
axia-allychain = { git = "https://github.com/purestake/axia", branch = "moonbeam-axia-v0.9.17" }
axia-primitives = { git = "https://github.com/purestake/axia", branch = "moonbeam-axia-v0.9.17" }
axia-service = { git = "https://github.com/purestake/axia", branch = "moonbeam-axia-v0.9.17" }
axia-test-service = { git = "https://github.com/purestake/axia", branch = "moonbeam-axia-v0.9.17" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/purestake/substrate", branch = "moonbeam-axia-v0.9.17" }

[features]
runtime-benchmarks = [ "allychain-template-runtime/runtime-benchmarks" ]
