[package]
name = "allychain-template-node"
authors = [ "Anonymous" ]
build = "build.rs"
description = "A Substrate node that demonstrates using the Nimbus consensus framework with instant seal and as a allychain."
edition = "2021"
homepage = "https://substrate.dev"
license = "Unlicense"
repository = "https://github.com/paritytech/cumulus/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[[bin]]
name = "allychain-collator"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
derive_more = "0.99.2"
hex-literal = "0.3.1"
log = "0.4.14"
serde = { version = "1.0.119", features = [ "derive" ] }
flume = "0.10.9"
clap = { version = "3.1", features = ["derive"] }

# RPC related Dependencies
jsonrpc-core = "18.0.0"

# Local Dependencies
nimbus-consensus = { path = "../../nimbus-consensus" }
nimbus-primitives = { path = "../../nimbus-primitives" }
allychain-template-runtime = { path = "../runtime" }

# Substrate Dependencies
frame-benchmarking = { git = "https://github.com/axtend/axlib", branch = "axlib" }
frame-benchmarking-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }

pallet-transaction-payment-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }

substrate-frame-rpc-system = { git = "https://github.com/axtend/axlib", branch = "axlib" }
substrate-prometheus-endpoint = { git = "https://github.com/axtend/axlib", branch = "axlib" }

## Substrate Client Dependencies
sc-basic-authorship = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-chain-spec = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-cli = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-client-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-consensus-manual-seal = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-executor = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-network = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-rpc = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-rpc-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-service = { git = "https://github.com/axtend/axlib", branch = "axlib", features = [ "wasmtime" ] }
sc-telemetry = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-tracing = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sc-transaction-pool-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }

## Substrate Primitive Dependencies
sp-api = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-block-builder = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-blockchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
#sp-consensus = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-inherents = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-keystore = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-offchain = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-runtime = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-session = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-timestamp = { git = "https://github.com/axtend/axlib", branch = "axlib" }
sp-transaction-pool = { git = "https://github.com/axtend/axlib", branch = "axlib" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-collator = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-consensus-common = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-network = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-client-service = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-primitives-core = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-primitives-allychain-inherent = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-relay-chain-interface = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
cumulus-relay-chain-local = { git = "https://github.com/axtend/cumulus", branch = "cumulus" }
# Axia dependencies
axia-cli = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-allychain = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-primitives = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-service = { git = "https://github.com/axtend/axia", branch = "axia" }
axia-test-service = { git = "https://github.com/axtend/axia", branch = "axia" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/axtend/axlib", branch = "axlib" }

[features]
runtime-benchmarks = [ "allychain-template-runtime/runtime-benchmarks" ]
